_sass/post.scss
.post-byline {
    padding-bottom: 2%;
    font-size: 1.5em;
    text-align: right;
}

.post-title {
    text-align: center;
    padding-top: 1%;
}

.post-content {
    width: 90vmin;
    margin: auto;
}

.side-img {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 5px;
    margin: auto;
}

.side-img img {
    width: 100%;
}

.captioned {
    padding: 1%;
    text-align: center;
}

.captioned img {
    margin-bottom: 0%
}

 // Code Snippets
 pre {
     white-space: pre-wrap;
     font-family: 'IBM Plex Mono', monospace;
     background-color: #f7fdf3;
     
     padding: 2em;
     padding-left: 4em;
     padding-right: 4em;

     outline: 2px solid #2A2F2B;
     border-radius: 0.5rem;
 }

